fix: longs name files icon fix: buttons developer tab fix: visible contextIds

--- a/src/contentscript/overlay/root/components/Dapplet/Dapplet.module.scss
+++ b/src/contentscript/overlay/root/components/Dapplet/Dapplet.module.scss
@@ -80,7 +80,7 @@
 }
 
 .header {
-  cursor: pointer;
+  // cursor: pointer;
 }
 
 .descriptionTop,
